# amqp-pathwatcher

./: .gitignore  LICENSE  Main.hs  Vagrantfile  amqp-pathwatcher.cabal  bootstrap.sh  default.nix  shell.nix
debian/: amqp-pathwatcher.default  amqp-pathwatcher.install  amqp-pathwatcher.upstart  changelog  control  rules
