name:                amqp-pathwatcher
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@simpleenergy.com
copyright:           Simple Energy
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable amqp-pathwatcher
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.5 && <4.7
                     , amqp >=0.8.3 && <0.9
                     , configurator >=0.2.0.2 && <0.3
                     , hinotify >=0.3.7 && <0.4
                     , optparse-applicative >=0.9.0 && <0.10
                     , bytestring
                     , filepath
                     , text
  default-language:    Haskell2010
