name:                amqp-pathwatcher
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@simpleenergy.com
copyright:           Simple Energy
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable amqp-pathwatcher
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.5 && <4.8
                     , amqp >=0.10.1
                     , configurator >=0.2.0.2 && <0.4
                     , hinotify >=0.3.7 && <0.4
                     , optparse-applicative >=0.9.0 && <0.12
                     , ekg >=0.4 && <0.5
                     , clock >=0.4.1.2
                     , bytestring
                     , directory
                     , filepath
                     , text
                     , unix
  default-language:    Haskell2010
